--- a/module_freshman/src/main/res/values/attrs.xml
+++ b/module_freshman/src/main/res/values/attrs.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-	<declare-styleable name="Calendar">
-		<attr name="selectColor" format="color"/>
-		<attr name="calendarTextSize" format="dimension"/>
-		<attr name="enableColor" format="color"/>
-		<attr name="unenableColor" format="color"/>
-		<attr name="bgSelectedColor" format="color"/>
-	</declare-styleable>
-
+    <declare-styleable name="FreshmanPieView">
+        <attr name="freshman_academy" format="string"/>
+        <attr name="freshman_male_angle" format="float"/>
+        <attr name="freshman_female_angle" format="float"/>
+    </declare-styleable>
 </resources>
