--- a/module_freshman/src/main/res/layout/freshman_fragment_bus_line.xml
+++ b/module_freshman/src/main/res/layout/freshman_fragment_bus_line.xml
@@ -20,7 +20,7 @@
                 android:layout_height="88dp">
 
             <TextView
-                    android:id="@+id/tv_address_school"
+                    android:id="@+id/tv_school_address"
                     android:paddingStart="19dp"
                     android:text="重庆邮电大学地址："
                     android:textSize="15sp"
@@ -30,8 +30,9 @@
                     tools:ignore="HardcodedText,RtlSymmetry"/>
 
             <TextView
+                    android:id="@+id/tv_spefic_school_address"
                     android:layout_marginTop="14dp"
-                    android:layout_below="@+id/tv_address_school"
+                    android:layout_below="@+id/tv_school_address"
                     android:paddingStart="19dp"
                     android:text="重庆市南岸区南山街道崇文路二号重庆邮电大学"
                     android:textSize="14sp"
@@ -41,6 +42,7 @@
                     tools:ignore="HardcodedText,RtlSymmetry"/>
 
             <TextView
+                    android:id="@+id/tv_copy_school_address"
                     android:layout_alignParentEnd="true"
                     android:paddingStart="19dp"
                     android:text="复制地址"
