--- a/module_freshman/src/main/res/layout/freshman_activity_communicate.xml
+++ b/module_freshman/src/main/res/layout/freshman_activity_communicate.xml
@@ -39,7 +39,7 @@
 
     </LinearLayout>
 
-    <com.mredrock.cyxbs.freshman.customedview.CursorView
+    <com.mredrock.cyxbs.freshman.weight.CursorView
             android:layout_width="match_parent"
             android:layout_height="5dp"
             android:id="@+id/curson_view"
