--- a/module_freshman/src/main/res/layout/freshman_activity_main.xml
+++ b/module_freshman/src/main/res/layout/freshman_activity_main.xml
@@ -6,7 +6,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@color/freshman_main_bg"
-        tools:context=".activity.MainActivity">
+        tools:context=".ui.activity.MainActivity">
 
     <ImageView
             android:id="@+id/iv_main_top"
