--- a/module_freshman/src/main/res/layout/freshman_activity_show_way.xml
+++ b/module_freshman/src/main/res/layout/freshman_activity_show_way.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".activity.ShowWayActivity">
+        tools:context=".ui.activity.ShowWayActivity">
 
     <include
             layout="@layout/common_toolbar"
