--- a/module_freshman/src/main/res/layout/freshman_course_fragment.xml
+++ b/module_freshman/src/main/res/layout/freshman_course_fragment.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.fragment.data.CourseFragment">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent" android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:background="@drawable/data_background">
 
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Hello"/>
+    <LinearLayout android:layout_width="345dp"
+                  android:layout_height="328dp"
+                  android:layout_marginTop="15dp"
+                  android:layout_gravity="center_horizontal"
+                  android:background="@drawable/data_percent">
 
-</FrameLayout>
+
+        <com.mredrock.cyxbs.freshman.weight.FreshmanBarGraghView android:layout_width="match_parent"
+                                                                 android:layout_height="match_parent"
+                                                                 android:id="@+id/barGraghView"/>
+
+    </LinearLayout>
+</LinearLayout>
