--- a/module_freshman/src/main/res/values/attrs.xml
+++ b/module_freshman/src/main/res/values/attrs.xml
@@ -2,7 +2,16 @@
 <resources>
     <declare-styleable name="FreshmanPieView">
         <attr name="freshman_academy" format="string"/>
-        <attr name="freshman_male_angle" format="float"/>
-        <attr name="freshman_female_angle" format="float"/>
+        <attr name="freshman_male_percent" format="float"/>
+        <attr name="freshman_female_percent" format="float"/>
+    </declare-styleable>
+
+    <declare-styleable name="FreshmanBarGraghView">
+        <attr name="freshman_academy_name_first" format="string"/>
+        <attr name="freshman_academy_name_second" format="string"/>
+        <attr name="freshman_academy_name_third" format="string"/>
+        <attr name="freshman_academy_percent_first" format="integer"/>
+        <attr name="freshman_academy_percent_second" format="integer"/>
+        <attr name="freshman_academy_percent_third" format="integer"/>
     </declare-styleable>
 </resources>
