完成入学必备的RecycylerView的布局和总布局

--- a/module_freshman/src/main/res/layout/freshman_activity_show_picture.xml
+++ b/module_freshman/src/main/res/layout/freshman_activity_show_picture.xml
@@ -5,7 +5,7 @@
         android:background="@color/freshman_black"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activity.ShowPictureActivity">
+        tools:context=".ui.activity.ShowPictureActivity">
 
 
     <ImageView
