--- a/module_freshman/src/main/res/layout/freshman_recycle_item_bus_line.xml
+++ b/module_freshman/src/main/res/layout/freshman_recycle_item_bus_line.xml
@@ -7,6 +7,7 @@
             android:layout_marginBottom="15dp"
             android:background="@drawable/freshman_bus_line_bg"
             android:layout_width="wrap_content"
+            android:gravity="center_vertical"
             android:orientation="vertical"
             android:layout_height="wrap_content">
 
