--- a/module_freshman/src/main/res/layout/freshman_recycle_item_fold.xml
+++ b/module_freshman/src/main/res/layout/freshman_recycle_item_fold.xml
@@ -1,51 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp">
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_marginBottom="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:background="@drawable/freshman_bus_line_bg"
+        android:layout_width="wrap_content"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
 
-    <CheckBox
-            android:layout_alignParentStart="true"
-            android:id="@+id/cb_fold"
-            android:layout_width="20dp"
-            android:layout_height="20dp"/>
-    <LinearLayout
-            android:id="@+id/ll_fold"
-            android:background="#2222"
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="match_parent">
-
-        <TextView
-                android:id="@+id/tv_msg_main"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="30dp"
-                android:text="" tools:ignore="HardcodedText,SpUsage"/>
-
-
-        <TextView
-                android:id="@+id/tv_msg_sub"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="15dp"
-                tools:ignore="HardcodedText,SpUsage"
-                android:text=""
-        />
-    </LinearLayout>
-
-
-    <ImageView
-            android:id="@+id/iv_msg_flod"
-            android:src="@drawable/freshman_flod_up"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
+    <RelativeLayout
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"
+            android:layout_marginEnd="16dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            tools:ignore="ContentDescription"/>
+            android:layout_height="wrap_content">
 
-</RelativeLayout>
+        <CheckBox
+                android:id="@+id/cb_necessary_fold"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="15dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
+
+        <TextView
+                android:id="@+id/tv_necessary_thing"
+                android:layout_toEndOf="@+id/cb_necessary_fold"
+                android:layout_marginStart="11dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#333333"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:text="录取通知书"
+                tools:ignore="HardcodedText,SpUsage"/>
+
+        <ImageView
+                android:id="@+id/iv_necessary_fold"
+                android:src="@drawable/freshman_flod_up"
+                android:layout_width="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                tools:ignore="ContentDescription"/>
+    </RelativeLayout>
+
+
+
+    <TextView
+            android:id="@+id/tv_necessary_spefic"
+            android:layout_marginStart="41dp"
+            android:layout_width="match_parent"
+            android:layout_marginTop="18dp"
+            android:layout_height="wrap_content"
+            android:textSize="15dp"
+            android:layout_marginBottom="20dp"
+            tools:ignore="HardcodedText,SpUsage"
+            android:textColor="#666666"
+            android:text=""/>
+
+
+
+</LinearLayout>
+
+
+
+
+
+
+
