--- a/module_freshman/src/main/res/layout/freshman_rich_edit_imageview.xml
+++ b/module_freshman/src/main/res/layout/freshman_rich_edit_imageview.xml
@@ -5,7 +5,7 @@
 		android:layout_height="match_parent"
 		tools:ignore="ResourceName">
 
-	<com.mredrock.cyxbs.freshman.text.DataImageView
+	<com.mredrock.cyxbs.freshman.weight.DataImageView
 			android:id="@+id/iv_editImage"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
