--- a/module_freshman/src/main/res/layout/freshman_activity_necessary_goods.xml
+++ b/module_freshman/src/main/res/layout/freshman_activity_necessary_goods.xml
@@ -1,32 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        tools:context=".ui.activity.NecessaryGoodsActivity"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".ui.activity.NecessaryGoodsActivity">
-
+        android:layout_height="match_parent">
 
     <include layout="@layout/common_toolbar"
-    android:id="@+id/tb_necessary_goods"/>
+             android:id="@+id/tb_necessary_goods"/>
 
 
-    <TextView
+    <androidx.core.widget.NestedScrollView
+            android:layout_below="@+id/tb_necessary_goods"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent">
+
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+
+
+            <TextView
+                    android:id="@+id/tv_character_memo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="15dp"
+                    android:text="备忘录"
+                    android:textSize="14sp"
+                    android:textColor="#999999"
+                    tools:ignore="HardcodedText"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_need_unfogetable"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            <TextView
+                    android:id="@+id/tv_character_need_register"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="15dp"
+                    android:text="报道必备"
+                    android:textSize="14sp"
+                    android:textColor="#999999"
+                    tools:ignore="HardcodedText"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_need_register"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            <TextView
+                    android:id="@+id/tv_character_army_training_need"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="15dp"
+                    android:text="军训用品"
+                    android:textSize="14sp"
+                    android:textColor="#999999"
+                    tools:ignore="HardcodedText"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_need_army_training"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+
+        </LinearLayout>
+
+
+    </androidx.core.widget.NestedScrollView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_goto_edit_page"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginStart="15dp"
-            android:text="报道必备"
-            android:textSize="14sp"
-            android:textColor="#999999"
-            tools:ignore="HardcodedText"/>
+            android:src="@drawable/freshman_school_scenery_bg_floatbutton"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="90dp"
+    />
 
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_temp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-</LinearLayout>
+</RelativeLayout>
