--- a/module_freshman/src/main/res/layout/freshman_recycle_item_fold_check.xml
+++ b/module_freshman/src/main/res/layout/freshman_recycle_item_fold_check.xml
@@ -22,7 +22,9 @@
         <CheckBox
                 android:id="@+id/cb_necessary_fold"
                 android:layout_alignParentStart="true"
+                android:background="@drawable/freshman_check_checkbox_school_necessary"
                 android:layout_marginStart="15dp"
+                android:button="@null"
                 android:layout_width="20dp"
                 android:layout_height="20dp"/>
 
