--- a/module_freshman/src/main/res/values/attrs.xml
+++ b/module_freshman/src/main/res/values/attrs.xml
@@ -10,8 +10,8 @@
         <attr name="freshman_academy_name_first" format="string"/>
         <attr name="freshman_academy_name_second" format="string"/>
         <attr name="freshman_academy_name_third" format="string"/>
-        <attr name="freshman_academy_percent_first" format="integer"/>
-        <attr name="freshman_academy_percent_second" format="integer"/>
-        <attr name="freshman_academy_percent_third" format="integer"/>
+        <attr name="freshman_academy_percent_first" format="float"/>
+        <attr name="freshman_academy_percent_second" format="float"/>
+        <attr name="freshman_academy_percent_third" format="float"/>
     </declare-styleable>
 </resources>
