--- a/module_freshman/src/main/res/layout/freshman_fragment_school_scenery.xml
+++ b/module_freshman/src/main/res/layout/freshman_fragment_school_scenery.xml
@@ -23,14 +23,15 @@
                 android:background="@drawable/freshman_showway_bg_scenery"
                 android:layout_width="match_parent"
                 android:orientation="vertical"
-                android:layout_height="250dp"
+                android:layout_height="wrap_content"
                 tools:ignore="RtlSymmetry">
 
             <ImageView
-                    android:background="#568"
+                    android:background="#f8fbff"
                     android:layout_width="match_parent"
-                    android:layout_height="164dp"
+                    android:layout_height="wrap_content"
                     android:contentDescription="TODO"
+                    android:src="@drawable/freshman_school_scenery_cqupt_2d_map"
                     tools:ignore="ContentDescription,HardcodedText"/>
 
             <TextView
@@ -39,7 +40,7 @@
                     android:text="重邮2D地图"
                     android:textSize="15sp"
                     android:layout_width="match_parent"
-                    android:layout_height="14dp"
+                    android:layout_height="wrap_content"
                     tools:ignore="HardcodedText"/>
 
             <TextView
@@ -47,7 +48,7 @@
                     android:textColor="#636466"
                     android:text="重邮全景地图前往发现查看(发现->查看)"
                     android:layout_width="match_parent"
-                    android:layout_height="13dp"
+                    android:layout_height="wrap_content"
                     tools:ignore="HardcodedText"/>
 
         </LinearLayout>
