--- a/module_freshman/src/main/res/layout/freshman_fragment_bus_line.xml
+++ b/module_freshman/src/main/res/layout/freshman_fragment_bus_line.xml
@@ -38,7 +38,7 @@
                     android:textSize="14sp"
                     android:textColor="#666666"
                     android:layout_width="wrap_content"
-                    android:layout_height="14dp"
+                    android:layout_height="wrap_content"
                     tools:ignore="HardcodedText,RtlSymmetry"/>
 
             <TextView
