--- a/module_freshman/src/main/res/layout/freshman_recycle_item_initial.xml
+++ b/module_freshman/src/main/res/layout/freshman_recycle_item_initial.xml
@@ -5,19 +5,20 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:background="@drawable/freshman_initial_bg_recycle"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/freshman_recycle_initial_item_height"
-        android:padding="21dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp">
 
 
         <LinearLayout
+                android:layout_marginStart="22dp"
+                android:layout_centerVertical="true"
                 android:layout_toStartOf="@+id/iv_recycle_initial_goto"
                 android:orientation="vertical"
                 android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
             <TextView
                     android:id="@+id/tv_initial_first"
@@ -32,7 +33,7 @@
             <TextView
                     android:id="@+id/tv_initial_second"
                     android:layout_width="match_parent"
-                    android:layout_height="20dp"
+                    android:layout_height="wrap_content"
                     android:textSize="@dimen/freshman_recycle_initial_tv_second_text_size"
                     android:textColor="@color/freshman_gray"
                     android:text=""
