--- a/module_freshman/src/main/res/layout/freshman_activity_more_function.xml
+++ b/module_freshman/src/main/res/layout/freshman_activity_more_function.xml
@@ -37,7 +37,7 @@
                       android:text="@string/freshman_future"/>
         </LinearLayout>
 
-        <Button android:layout_width="16dp"
+        <ImageView android:layout_width="16dp"
                 android:layout_height="13dp"
                 android:background="@drawable/more_next"
                 android:layout_centerVertical="true"
@@ -78,7 +78,7 @@
                       android:text="@string/freshman_more"/>
         </LinearLayout>
 
-        <Button android:layout_width="16dp"
+        <ImageView android:layout_width="16dp"
                 android:layout_height="13dp"
                 android:background="@drawable/more_next"
                 android:layout_centerVertical="true"
@@ -119,7 +119,7 @@
                       android:text="@string/freshman_help"/>
         </LinearLayout>
 
-        <Button android:layout_width="16dp"
+        <ImageView android:layout_width="16dp"
                 android:layout_height="13dp"
                 android:background="@drawable/more_next"
                 android:layout_centerVertical="true"
