--- a/module_freshman/src/main/res/layout/freshman_activity_main.xml
+++ b/module_freshman/src/main/res/layout/freshman_activity_main.xml
@@ -12,27 +12,42 @@
             android:id="@+id/iv_main_top"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="290"
+            android:layout_weight="450"
             android:scaleType="fitXY"
             android:src="@drawable/main_banner"
             android:background="@color/freshman_main_bg"
             tools:ignore="ContentDescription"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_initial_page"
+    <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="646"
-            android:background="@color/freshman_main_bg"/>
+            android:layout_weight="682"
+            android:layout_height="0dp">
+
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="match_parent">
+
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_initial_page"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/freshman_main_bg"/>
+
+            <ImageView
+                    android:layout_below="@id/rv_initial_page"
+                    android:layout_alignParentEnd="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/freshman_initial_icon_bottle"
+
+                    tools:ignore="ContentDescription"/>
+
+        </RelativeLayout>
+
+
+    </androidx.core.widget.NestedScrollView>
+
+
     <!--android:layout_below="@+id/iv_main_top"/>-->
-
-
-    <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="37"
-            android:src="@drawable/freshman_initial_icon_bottle"
-
-            tools:ignore="ContentDescription"/>
 
 </LinearLayout>
