--- a/module_freshman/src/main/res/layout/freshman_recycle_item_edit_memo.xml
+++ b/module_freshman/src/main/res/layout/freshman_recycle_item_edit_memo.xml
@@ -1,21 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_marginBottom="15dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:background="@drawable/freshman_bus_line_bg"
-        android:layout_width="wrap_content"
-        android:orientation="vertical"
-        android:layout_height="wrap_content">
-
     <RelativeLayout
-            android:layout_marginTop="20dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:background="@drawable/freshman_bus_line_bg"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
@@ -25,6 +16,7 @@
                 android:background="@drawable/freshman_check_checkbox_edit_memo"
                 android:layout_marginStart="15dp"
                 android:button="@null"
+                android:layout_marginTop="26dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
@@ -34,6 +26,7 @@
                 android:layout_marginStart="11dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="26dp"
                 android:textColor="#333333"
                 android:textSize="15sp"
                 android:textStyle="bold"
@@ -47,7 +40,6 @@
                 android:layout_height="0dp"
                 android:layout_marginEnd="20dp"
                 tools:ignore="ContentDescription"/>
-    </RelativeLayout>
 
 
 
@@ -61,8 +53,14 @@
             android:text=""/>
 
 
+    <TextView
+            android:id="@+id/tv_click"
+            android:layout_width="match_parent"
+            android:layout_marginStart="60dp"
+            android:layout_height="50dp"/>
 
-</LinearLayout>
+</RelativeLayout>
+
 
 
 
