--- a/module_freshman/src/main/res/values/styles.xml
+++ b/module_freshman/src/main/res/values/styles.xml
@@ -1,11 +1,16 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="FreshmanAppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:actionOverflowButtonStyle">@style/FreshmanOverFlow</item>
+    </style>
+
+    <style name="FreshmanOverFlow" >
+        <item name="android:src">@drawable/freshman_edit_memo_character_deit</item>
     </style>
 
 </resources>
