--- a/module_freshman/src/main/res/layout/freshman_activity_admission_process.xml
+++ b/module_freshman/src/main/res/layout/freshman_activity_admission_process.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:background="#eff7ff"
@@ -13,29 +13,42 @@
              android:id="@+id/tb_admission_process"/>
 
     <androidx.core.widget.NestedScrollView
+            android:layout_below="@id/tb_admission_process"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="match_parent">
-        <TextView
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="15dp"
-                android:textSize="16sp"
-                android:textColor="#666666"
-                android:text="报道时间: 9月5日--9月6日"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:ignore="HardcodedText"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_admission_process"
+        <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent">
+            <TextView
+                    android:id="@+id/tv_admission_time"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="15dp"
+                    android:textSize="16sp"
+                    android:textColor="#666666"
+                    android:text="报道时间: 9月5日--9月6日"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:ignore="HardcodedText"/>
 
-    </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                    android:layout_below="@+id/tv_admission_time"
+                    android:id="@+id/rv_admission_process"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
+
+
+        </RelativeLayout>
 
     </androidx.core.widget.NestedScrollView>
+    <TextView
+            android:layout_marginTop="50dp"
+            android:layout_width="2dp"
+            android:background="#aec0ff"
+            android:layout_marginStart="21dp"
+            android:layout_height="match_parent"/>
 
-</LinearLayout>
+
+</RelativeLayout>
