--- a/module_freshman/src/main/res/layout/freshman_activity_edit_memo.xml
+++ b/module_freshman/src/main/res/layout/freshman_activity_edit_memo.xml
@@ -1,21 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="#eff7ff"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.activity.EditMemoActivity">
 
-    <include layout="@layout/common_toolbar"
-    android:id="@+id/tb_edit_memo"/>
+   <androidx.appcompat.widget.Toolbar
+           android:id="@+id/tb_edit_memo"
+           android:paddingBottom="20dp"
+           android:paddingTop="20dp"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:background="@drawable/common_toolbar_background"
+           android:fitsSystemWindows="true"
+           app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+           app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >
 
 
-    <fragment
+       <RelativeLayout
+               android:layout_width="match_parent"
+               android:layout_height="match_parent">
+
+           <TextView
+                   android:id="@+id/tv_edit_memo_cancel"
+                   android:layout_alignParentStart="true"
+                   android:text="取消"
+                   android:textSize="18sp"
+                   android:textColor="#ffffff"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   tools:ignore="HardcodedText"/>
+           <TextView
+                   android:id="@+id/tv_edit_memo_title"
+                   android:layout_centerHorizontal="true"
+                   android:text="编辑"
+                   android:textSize="18sp"
+                   android:textColor="#ffffff"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   tools:ignore="HardcodedText"/>
+
+           <TextView
+                   android:id="@+id/tv_edit_memo_save"
+                   android:layout_alignParentEnd="true"
+                   android:layout_marginEnd="15dp"
+                   android:text="保存"
+                   android:textSize="18sp"
+                   android:textColor="#ffffff"
+                   tools:ignore="HardcodedText"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"/>
+       </RelativeLayout>
+   </androidx.appcompat.widget.Toolbar>
+
+    <FrameLayout
             android:id="@+id/frgment_add_and_display"
-            android:layout_below="@+id/tb_edit_memo"
-            android:name="com.mredrock.cyxbs.freshman.ui.fragment.EditMemoItemFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
-</RelativeLayout>
+</LinearLayout>
