--- a/module_freshman/src/main/res/layout/freshman_fragment_add_memo_item.xml
+++ b/module_freshman/src/main/res/layout/freshman_fragment_add_memo_item.xml
@@ -20,6 +20,7 @@
 
     <EditText
             android:id="@+id/et_add_memo_item"
+            android:background="@drawable/freshman_add_memo_bg_edit"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
@@ -27,9 +28,9 @@
             android:layout_height="54dp"
             android:textColorHint="#b6b6b6"
             android:maxLength="15"
-            android:inputType="date"
             android:hint="输入不多于15个字"
             tools:ignore="HardcodedText"
             android:importantForAutofill="no"
-            tools:targetApi="o"/>
+            tools:targetApi="o"
+            android:inputType="text"/>
 </LinearLayout>
