--- a/module_freshman/src/main/res/layout/freshman_recycle_item_bus_line.xml
+++ b/module_freshman/src/main/res/layout/freshman_recycle_item_bus_line.xml
@@ -44,6 +44,12 @@
                 android:text=""/>
 
 
+    <TextView
+            android:id="@+id/tv_bus_line_click"
+            android:layout_width="match_parent"
+            android:layout_marginStart="100dp"
+            android:layout_height="50dp">
+    </TextView>
 </RelativeLayout>
 
 
