--- a/module_freshman/src/main/res/layout/freshman_recycle_item_edit_memo.xml
+++ b/module_freshman/src/main/res/layout/freshman_recycle_item_edit_memo.xml
@@ -21,7 +21,7 @@
                 android:layout_height="wrap_content"/>
 
         <TextView
-                android:id="@+id/tv_necessary_thing"
+                android:id="@+id/tv_diy_necessary_thing"
                 android:layout_toEndOf="@+id/cb_necessary_fold"
                 android:layout_marginStart="11dp"
                 android:layout_width="match_parent"
@@ -30,8 +30,7 @@
                 android:textColor="#333333"
                 android:textSize="15sp"
                 android:textStyle="bold"
-                android:text="录取通知书"
-                tools:ignore="HardcodedText,SpUsage"/>
+                tools:text="录取通知书"/>
 
         <ImageView
                 android:id="@+id/iv_necessary_fold"
@@ -56,7 +55,7 @@
     <TextView
             android:id="@+id/tv_click"
             android:layout_width="match_parent"
-            android:layout_marginStart="60dp"
+            android:layout_marginStart="200dp"
             android:layout_height="50dp"/>
 
 </RelativeLayout>
