网络请求基本完成

--- a/module_freshman/src/main/res/layout/freshman_activity_communicate.xml
+++ b/module_freshman/src/main/res/layout/freshman_activity_communicate.xml
@@ -46,7 +46,7 @@
     </LinearLayout>
 
     <View android:layout_width="match_parent"
-          android:layout_height="1px"
+          android:layout_height="1dp"
           android:background="#b3c4ff"/>
 
 
