--- a/module_freshman/src/main/res/layout/freshman_fragment_academy.xml
+++ b/module_freshman/src/main/res/layout/freshman_fragment_academy.xml
@@ -1,23 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@drawable/data_background"
-              android:orientation="vertical">
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+                                       android:layout_width="match_parent"
+                                       android:background="@drawable/data_background"
+                                       android:layout_height="match_parent">
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <EditText android:layout_width="match_parent"
-              android:layout_height="53dp"
-              android:layout_marginLeft="15dp"
-              android:layout_marginRight="15dp"
-              android:background="@drawable/edit_back"
-              android:hint="@string/freshman_edit"
-              android:drawablePadding="10dp"
-              android:textSize="15sp"
-              android:paddingLeft="15dp"
-              android:drawableStart="@drawable/search"/>
+        <EditText android:layout_width="match_parent"
+                  android:layout_height="53dp"
+                  android:layout_marginLeft="15dp"
+                  android:layout_marginRight="15dp"
+                  android:layout_marginTop="15dp"
+                  android:background="@drawable/edit_back"
+                  android:hint="@string/freshman_edit"
+                  android:drawablePadding="10dp"
+                  android:textSize="15sp"
+                  android:paddingStart="15dp"
+                  android:inputType="text"
+                  android:drawableStart="@drawable/search"/>
 
-    <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent"
-                                               android:layout_height="match_parent"
-                                               android:layout_marginLeft="15dp"
-                                               android:layout_marginRight="15dp"/>
-</LinearLayout>
+        <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent"
+                                                   android:layout_height="wrap_content"
+                                                   android:layout_marginLeft="15dp"
+                                                   android:id="@+id/rv_communicate"
+                                                   android:layout_marginRight="15dp"/>
+
+        <TextView android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:textSize="12sp"
+                  android:textColor="#acacac"
+                  android:layout_marginTop="15dp"
+                  android:layout_gravity="center_horizontal"
+                  android:text="@string/freshman_nomore"/>
+    </LinearLayout>
+</androidx.core.widget.NestedScrollView>
