--- a/module_freshman/src/main/res/layout/freshman_course_fragment.xml
+++ b/module_freshman/src/main/res/layout/freshman_course_fragment.xml
@@ -14,7 +14,9 @@
 
         <com.mredrock.cyxbs.freshman.weight.FreshmanBarGraghView android:layout_width="match_parent"
                                                                  android:layout_height="match_parent"
-
+                                                                 app:freshman_academy_name_first="暂无"
+                                                                 app:freshman_academy_name_second="暂无"
+                                                                 app:freshman_academy_name_third="暂无"
                                                                  android:id="@+id/barGraghView"/>
 
     </LinearLayout>
