--- a/module_freshman/src/main/res/layout/freshman_sf_fragment.xml
+++ b/module_freshman/src/main/res/layout/freshman_sf_fragment.xml
@@ -14,11 +14,14 @@
                   android:background="@drawable/guide_item_background"
                   android:id="@+id/ll_guide_delivery">
 
-        <ImageView android:layout_width="309dp"
-                                 android:layout_height="191dp"
-                                 android:layout_marginTop="18dp"
-                                 android:layout_gravity="center_horizontal"
-                                 android:id="@+id/banner_sf"/>
+        <ImageView android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_marginLeft="15dp"
+                   android:layout_marginRight="15dp"
+                   android:adjustViewBounds="true"
+                   android:layout_marginTop="18dp"
+                   android:layout_gravity="center_horizontal"
+                   android:id="@+id/banner_sf"/>
 
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
